--- a/sirius-git/PKGBUILD
+++ b/sirius-git/PKGBUILD
@@ -1,34 +1,35 @@
 pkgname=sirius-git
 _gitname=sirius
-pkgver= #TODO
+pkgver=1.0.r99.gc53543b
 pkgrel=1
-pkgdesc="" #TODO
-arch=() #TODO
-url="" #TODO
-license=('') #TODO
+pkgdesc="A speech and vision based intelligent personal assistant"
+arch=(x86_64) #TODO
+url="http://sirius.clarity-lab.org/"
+license=('BSD')
 depends=('ffmpeg'
-	 'tesseract' 'tesseract-data-eng' 'atlas-lapack' 'opencv'
-) #swig to makedepends? tesseract libs? leptonica ommited as being dep of tesseract
-makedepends=('git' 'apache-ant' 'automake' 'autoconf' 'libtool' 'bison' 'boost-libs' 'swig')
+	 'tesseract' 'tesseract-data-eng' 'atlas-lapack'
+) # tesseract libs only? leptonica ommited as being dep of tesseract; jdk7?
+makedepends=('git' 'apache-ant' 'automake' 'autoconf' 'libtool' 'bison' 'boost-libs' 'swig' 'opencv' 'openfst')
 #only boost-libs and git? else in base/ base-devel?
-optdepends=(':	'
-	    ':'	     )
+# optdepends=(':	'
+#	    ':'	     )
 source=('sirius::git+https://github.com/jhauswald/sirius#branch=master')
 md5sums=("SKIP")
 
 pkgver() {
 	cd "$pkgname"
-	git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
+	git describe --long | sed 's/^sirius-application-//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-	cd "${srcdr}/${_gitname}/{sirius-application}"
-	./get-opencv.sh
+	# deps handled
+	cd "${srcdr}/${_gitname}/{sirius-applicaton}"
+	./get-kaldi.sh
+	# opencv handled
+	# compile in build
 }
 
-build()= {
+build() {
 	cd "${srcdir}/${_gitname}"
 	./compile-sirius-servers.sh
-
 }
-
