--- a/sirius-git/PKGBUILD
+++ b/sirius-git/PKGBUILD
@@ -6,8 +6,7 @@ pkgdesc="A speech and vision based intelligent personal assistant"
 arch=(x86_64) #TODO
 url="http://sirius.clarity-lab.org/"
 license=('BSD')
-depends=('ffmpeg'
-	 'tesseract' 'tesseract-data-eng' 'atlas-lapack'
+depends=('ffmpeg' 
 ) # tesseract libs only? leptonica ommited as being dep of tesseract; jdk7?
 makedepends=('git' 'wget' 'apache-ant' 'automake' 'autoconf' 'libtool' 'bison' 'boost-libs' 'swig' 'opencv' 'openfst')
 #only boost-libs and git? else in base/ base-devel?
@@ -17,13 +16,14 @@ source=('sirius::git+https://github.com/jhauswald/sirius#branch=master')
 md5sums=("SKIP")
 
 pkgver() {
-	cd "$pkgname"
+	cd "${srcdir}/${_gitname}"
 	git describe --long | sed 's/^sirius-application-//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
 	# deps handled
-	cd "${srcdr}/${_gitname}/{sirius-applicaton}"
+	echo $(pwd)
+	cd "${srcdir}/${_gitname}/sirius-application"
 	./get-kaldi.sh
 	# opencv handled
 	# compile in build
