updated upstream url

--- a/ducklauncher-git/PKGBUILD
+++ b/ducklauncher-git/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=r61.e160dd1
 pkgrel=2
 replaces=('ducklauncher')
 arch=('i686' 'x86_64')
-url="https://github.com/the-duck/launcher"
+url="https://the-duck.github.io/"
 depends=('python2-pyside' 'python2-xlib' 'pygtk' 'python2-wnck' 'python2-cssutils' 'hicolor-icon-theme' 'python2-simplejson' 'python2-xdg' 'python2-notify2' 'python2-pyqt4')
 makedepends=('git')
 license=('GPL2')
