--- a/herder-cpusim-git/PKGBUILD
+++ b/herder-cpusim-git/PKGBUILD
@@ -2,20 +2,22 @@
 pkgname=herder-cpusim-git
 url="https://github.com/HERDER2014/CPUSim"
 _gitname=CPUSim
-pkgver=v0.1.alpha.3.r0.gf4e60d7
+pkgver=v1.0.beta.1.r4.gc8fd978
 pkgrel=1
 pkgdesc="Pseudo Assembly/CPU-Simulator for educational purposes - QT-Version"
 arch=(x86_64) #TODO
 url="https://github.com/HERDER2014/CPUSim"
 license=('(L)GPL')
-depends=('qt4pas') #TODO? 
+depends=('qt4pas') #TODO?
 makedepends=('git' 'lazarus' 'qt4pas' 'lazarus-qt')
 # lazarus-qt may not be needed
 
 optdepends=(
 	'qtcurve-qt4: Confirmed-working theme')
-source=('CPUSim::git+https://github.com/HERDER2014/CPUSim#branch=master')
-md5sums=("SKIP")
+source=('CPUSim::git+https://github.com/HERDER2014/CPUSim#branch=master'
+	'cpusim.desktop')
+md5sums=("SKIP"
+	 "SKIP")
 
 pkgver() {
 	cd "${srcdir}/${_gitname}/src"
@@ -31,7 +33,10 @@ build() {
 }
 
 package() {
-	cd "${srcdir}/${_gitname}/bin"
-
-	install -D -m 755 cpusim ${pkgdir}/usr/bin/cpusim
+	cd "${srcdir}/${_gitname}"
+	install -D -m 755 bin/cpusim ${pkgdir}/usr/bin/cpusim
+	install -d -m 755 ${pkgdir}/usr/share/cpusim/Examples
+	install -D -m 644 Examples/* ${pkgdir}/usr/share/cpusim/Examples
+	install -D -m 644 ${srcdir}/cpusim.desktop ${pkgdir}/usr/share/applications/cpusim.desktop
+	install -D -m 644 src/cpusim.png ${pkgdir}/usr/share/pixmaps/cpusim.png
 }
