--- a/herder-cpusim-git/PKGBUILD
+++ b/herder-cpusim-git/PKGBUILD
@@ -2,7 +2,7 @@
 pkgname=herder-cpusim-git
 url="https://github.com/HERDER2014/CPUSim"
 _gitname=CPUSim
-pkgver=v1.0.beta.1.r4.gc8fd978
+pkgver=v1.0.beta.1.r6.g03ac699
 pkgrel=1
 pkgdesc="Pseudo Assembly/CPU-Simulator for educational purposes - QT-Version"
 arch=(x86_64) #TODO
