--- a/snowshoe-git/PKGBUILD
+++ b/snowshoe-git/PKGBUILD
@@ -3,6 +3,7 @@
 pkgname='snowshoe-git'
 pkgver=r452.f131998
 pkgrel=1
+epoch=1
 pkgdesc="Snowshoe is an open source project to build a cross platform browser application with multiple user interfaces while sharing the same core engine, based on Qt5 and WebKit2 technologies."
 arch=('i686' 'x86_64')
 url="https://github.com/snowshoe/snowshoe"
