--- a/xcb-util-cursor-git/PKGBUILD
+++ b/xcb-util-cursor-git/PKGBUILD
@@ -4,6 +4,7 @@ _pkgname=util-cursor
 pkgname=xcb-${_pkgname}-git
 pkgver=0.1.2.r0.g8eb844d
 pkgrel=1
+epoch=1
 pkgdesc='XCB cursor management library'
 arch=('i686' 'x86_64')
 url="http://cgit.freedesktop.org/xcb/${_pkgname}"
