--- a/xcb-util-cursor-git/PKGBUILD
+++ b/xcb-util-cursor-git/PKGBUILD
@@ -3,12 +3,12 @@
 _pkgname=util-cursor
 pkgname=xcb-${_pkgname}-git
 pkgver=0.1.2.r0.g8eb844d
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc='XCB cursor management library'
 arch=('i686' 'x86_64')
 url="http://cgit.freedesktop.org/xcb/${_pkgname}"
-license=('custom:MIT')
+license=('MIT')
 depends=('libxcb' 'xcb-util-renderutil' 'xcb-util-image')
 makedepends=('git' 'xorg-util-macros' 'gperf')
 provides=("xcb-${_pkgname}")
@@ -31,4 +31,6 @@ build() {
 package() {
   cd "$_pkgname"
   make DESTDIR="$pkgdir" install
+  mkdir -p "$pkgdir/usr/share/licenses/$pkgname/"
+  cp "$srcdir/$_pkgname/COPYING" "$pkgdir/usr/share/licenses/$pkgname/"
 }
