move to AUR 4.0

--- a/sayonara-player-svn/PKGBUILD
+++ b/sayonara-player-svn/PKGBUILD
@@ -24,7 +24,10 @@ pkgver() {
 }
 
 build() {
-  cd "$SRCDEST/$pkgname"
+#  msg "$PWD"
+#  msg "$pkgname"
+#  msg "$ls"
+  cd "$pkgname"
   cmake . -DCMAKE_INSTALL_PREFIX=/usr
   make
 }
